--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@ body {
 
 .main-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: space-between;
   flex-direction: row;
 }
 
@@ -39,12 +39,11 @@ body {
 }
 
 aside {
-  height: 102%;
+  height: 1200px;
   width: 240px;
   box-sizing: border-box;
   display: block;
   background-color: white;
-  float: left;
 }
 
 header {
@@ -55,4 +54,55 @@ header {
   display: flex;
   align-items: center;
   padding: 0 20px;
+}
+
+article {
+  width: 100%;
+}
+
+a {
+  color: #22A5F7;
+  font: 400 14px/10px "nutanix_soft", san-serif;
+  text-decoration: none;
+}
+
+a:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.container {
+  padding: 20px;
+}
+
+.table-wrapper {
+  background-color: white;
+  width: 100%;
+  border-radius: 4px;
+  padding: 0 5px;
+  box-sizing: border-box;
+}
+
+table {
+  width: calc(100% + 10px);
+  margin: 0 -5px;
+}
+
+th, td {
+  height: 40px;
+  vertical-align: middle;
+  text-align: left;
+  padding: 0 15px;
+}
+
+td > p, th > p {
+  text-align: right;
+}
+
+th:not(:last-child) {
+  border-right: 1px solid #F2F4F6;
+}
+
+th, tr:not(:last-child) {
+  border-bottom: 1px solid #F2F4F6;
 }
