--- a/css/style.scss
+++ b/css/style.scss
@@ -11,13 +11,124 @@ html {
 	height: 100%;
 }
 
+header{
+  background-color: $background-color-1;
+  @include size(60px, 100%);
+  padding: 20px;
+  position: fixed;
+  z-index: 20;
+  @include flex(center, space-between, row);
+  svg{
+    @include size(16px, 22px);
+    fill:$background-color-4;
+  }
+}
+
+.searchnav{
+  @include flex(center, center, row);
+  > * {
+    margin-right: 20px;
+    position: relative;
+  }
+  &::before{
+      content:"";
+      @include size(12px, 12px);
+      position: absolute;
+      background: url('../img/search-icon.svg');
+      top:24px;
+      left: 62px;
+      z-index: 10;
+    }
+}
+
+.search-bar{
+  @include size( 32px, 250px);
+  position: relative;
+  outline: none;
+  background-color: $background-color-2;
+  padding:8px 8px 8px 30px;
+  border: none;
+  border-radius: 4px;
+  font:$p;
+  font-weight: 500;
+  color:white;
+  &::placeholder{color:white;}
+}
+
+.hamburger-icon{
+  @include size(14px, 14px);
+  @include flex(center, space-between, column);
+  .icon-line{
+    @include size(2px, 100%);
+    display: block;
+    background-color: $font-color-3;
+    border-radius: 1px;
+  }
+}
+
+.status{
+  @include flex(center, flex-end, row);
+
+  .icon{
+    @include size(14px, 14px);
+    margin-right: 50px;
+    position: relative;
+
+    &::after{
+      content: '3';
+      position: absolute;
+      padding: 5px 6px;
+      background-color:red;
+      left:25px;
+      top:-2px;
+      font-size: 12px;
+      line-height: 7pt;
+      display: block;
+      font-weight: 600;
+      color:white;
+      border-radius: 4pc;
+    }
+  }
+
+  .bell{
+    background: url('../img/bell.svg');
+    &::after{background-color: $red-1;}
+  }
+  .task{
+    background: url('../img/task.svg');
+    &::after{background-color: $blue-1;}
+  }
+
+
+  h6{
+    margin-left: 10px;
+    font:$p;
+    color: $font-color-4;
+    font-weight: 500;
+  }
+}
+
+// buttons
+.primary { @include primary }
+
+.primary-alt{
+  @include primary;
+  display: inline-flex;
+  position: relative;
+  border-radius: 4px 0px 0px 4px;
+  font-weight: 500;
+}
+
 body {
 	@include size(100%, 100%);
 }
 
 .main-container {
 	@include flex(flex-start, space-between, row);
+	padding-top: 60px;
 }
+
+
 
 .banner {
 	@include size(40px, 100%);
@@ -85,4 +196,92 @@ th:not(:last-child){
 
 th, tr:not(:last-child){
 	border-bottom: 1px solid $border-color-3;
+}
+
+
+//notification
+
+.card{
+  width: 300px;
+  margin-right: 20px;
+  min-width: 280px;
+	position:fixed;
+	top: 72px;
+	right:-8px;
+	box-shadow: 0px 2px 6px 0px rgba(0,0,0,0.1);
+	border-radius: 4px;
+}
+
+.card-body{
+  @include secondary-alt;
+  padding: 20px;
+  position: relative;
+  border-radius: 0 0 4px 4px;
+	border-top: none;
+  &:hover{
+    color: $font-color-1;
+  }
+
+  &:not(:last-child){
+    margin-right: 20px;
+  }
+
+  p:first-of-type{
+    margin-top: 0;
+  }
+}
+
+a{@include link;
+
+	&:hover{
+		background-color: $blue-1;
+		color:white;
+		text-decoration: none;
+		border-radius: 0 0 0 3px;
+		margin: 0;
+	
+		}
+}
+
+.card-header{
+  @include size(40px, 100%);
+  @include flex(center, space-between, row);
+  border-radius: 4px 4px 0 0;
+  padding: 15px 20px;
+  border-bottom: 1px solid $border-color-3;
+  background-color: white;
+	font-weight: 500;
+}
+
+.row{
+	@include flex(center, flex-start, row);
+}
+
+.notification-icon{
+	@include size(40px, 40px);
+	background-color: $light-blue-3;
+	background-image: url(../img/star.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	border-radius: 4pc;
+	margin-right: 20px;
+	flex-shrink: 0;
+
+}
+.card-footer{
+	@include size(32px, calc(100% + 40px));
+	@include flex(center, space-between, row);
+	margin: 0 -20px -10px -20px;
+
+	border-top: 1px solid $border-color-3;
+
+	a{
+		padding: 15px;
+		margin-top: 10px;
+		width: 50%;
+		text-align: center;
+		&:first-child{
+			border-right: 1px solid $border-color-3;
+		}
+	}
 }
